--- a/.github/workflows/run_ui_tests.yml
+++ b/.github/workflows/run_ui_tests.yml
@@ -10,7 +10,7 @@ on:
 
   pull_request:
     branches:
-      - "**"  # Run on pull requests for all branches
+      - "**" # Run on pull requests for all branches
 
 jobs:
   run-tests:
@@ -33,17 +33,38 @@ jobs:
           pip install poetry
           poetry install
 
-      # Run pytest with the provided marker (workflow_dispatch) or default to regression (pull_request)
+      # Set environment variables from GitHub Secrets
+      - name: Set environment variables
+        run: echo "PASSWORD=${{ secrets.PASSWORD }}" >> $GITHUB_ENV
+
+      # Run pytest with the provided marker or regression
       - name: Run tests
+        env:
+          PASSWORD: ${{ secrets.PASSWORD }}  # Pass the secret to the test environment
         run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            marker="${{ github.event.inputs.marker }}"
-            if [ -z "$marker" ]; then
-              marker="regression"
-            fi
-            echo "Running tests with marker: $marker"
-          else
+          marker="${{ github.event.inputs.marker }}"
+          if [ -z "$marker" ]; then
             marker="regression"
-            echo "Pull request detected. Running default regression tests."
           fi
-          poetry run pytest -m "$marker"
+          echo "Running tests with marker: $marker"
+          make test "MARKER=$marker"
+
+
+      # Step 5: Generate Allure HTML report using Makefile
+      - name: Generate Allure Report
+        run: |
+          make generate-report
+
+      # Step 6: Upload Allure Report as an artifact
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-report
+          path: ui_automation_suite/bdd_tests/reports/allure-report-bdd
+
+      # Step 7: Deploy Allure Report to GitHub Pages
+      - name: Deploy Allure Report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ui_automation_suite/bdd_tests/reports/allure-report-bdd
