--- a/.github/workflows/run_ui_tests.yml
+++ b/.github/workflows/run_ui_tests.yml
@@ -47,13 +47,13 @@ jobs:
             marker="regression"
           fi
           echo "Running tests with marker: $marker"
-          make test "MARKER=$marker"
+          poetry run make test "MARKER=$marker"
 
 
       # Step 5: Generate Allure HTML report using Makefile
       - name: Generate Allure Report
         run: |
-          make generate-report
+          poetry run make generate-report
 
       # Step 6: Upload Allure Report as an artifact
       - name: Upload Allure Report
